fixed issue with loading indicator not showing

--- a/style/main.css
+++ b/style/main.css
@@ -107,7 +107,7 @@ img.setSymbol {
   text-align: center;
   margin: auto;
   margin-bottom: 10px;
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 #setContainer {
